--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
     <script src="assets/js/jquery-3.6.0.js"></script>
 
   </head>
-  <body oncontextmenu="return false;">
 
+  <body oncontextmenu="return false;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <a id='login-link' href='https://discord.com/api/oauth2/authorize?client_id=980875637562703952&redirect_uri=https%3A%2F%2Fdevdodger.github.io%2Fbloxy%2F%23&response_type=code&scope=identify%20guilds'>Login with Discord</a><br><br>
     <p id='welcome_txt'></p>
 
@@ -165,7 +170,7 @@
               <p class="subtitle has-text-grey-light is-size-6 mt-3">
                 The most powerful ROBLOX bot for discord
                 with the <b>most</b> advanced commands.<br>
-                <b>That's Bloxy</b>
+                <b>That's Bloxy.</b>
               </p>
               <div class="buttons">
                 <a href="https://discord.com/api/oauth2/authorize?client_id=980875637562703952&permissions=1532162993399&scope=bot%20applications.commands" class="button is-info">
