--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -4,7 +4,7 @@
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Private Policy</title>
+        <title>TOS</title>
         <link rel="stylesheet" href="assets/css/bulma.min.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -87,12 +87,12 @@
   <center>
   <h1>
     <b>
-    Private Policy
+    Terms Of Service
     <br>
     <br>
   </b>
   </h1>
-  <h3>Bloxy</h3>
+  <h3>User Agreement</h3>
     
 </center>
 </body>
