--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       </script>
     <script src="assets/js/jquery-3.6.0.js"></script>
 
+
+<style>
+
+#welcome_txt {
+            font-size: 24px;
+            text-align: center;
+        }
+</style>
+
   </head>
 
   <body oncontextmenu="return false;">
@@ -72,6 +81,15 @@
           <a href="https://max-51.gitbook.io/bloxy-documentation/" class="navbar-item is-tab">
             Docs
           </a>
+
+          <a href="policy.html" class="navbar-item is-tab">
+            Private Policy
+          </a>
+          
+          <a href="terms-of-service.html" class="navbar-item is-tab">
+            TOS
+          </a>
+
         </div>
 
         <div class="navbar-end">
@@ -85,24 +103,25 @@
 
           <div class="navbar-item">
             <div class="buttons">
-                <a id='login-link' class="button is-blurple" href='https://discord.com/api/oauth2/authorize?client_id=980875637562703952&redirect_uri=https%3A%2F%2Fdevdodger.github.io%2Fbloxy%2F%23&response_type=code&scope=identify%20guilds'>Login with Discord</a><br><br>
-               <!--<p id='welcome_txt'></p>-->      
+              <br>  <a id='login-link'  href='https://discord.com/api/oauth2/authorize?client_id=980875637562703952&redirect_uri=https%3A%2F%2Fdevdodger.github.io%2Fbloxy%2F%23&response_type=code&scope=identify%20guilds'>Login with Discord</a><br><br>
+               <!--<p id='welcome_txt' | class="button is-blurple"></p>-->     
+               <p id='welcome_txt'></p> 
                 <script>
                   window.onload = function () {
                       if (location.href.indexOf("code") !== -1) { // Detect if you logged in or not
                           const code = location.href.substring(location.href.indexOf("code") + 5, location.href.length); 
                           const req = new XMLHttpRequest(); // XMLHttpRequest
-                          req.open("POST", "http://https://devdodger.github.io/bloxy/user"); // localhost:80
+                          req.open("POST", "https://bloxy.digital:80")///user"); // localhost:80
                           req.send(code); 
                           req.onload = () => { 
                               if (req.status === 500) { 
-                                  document.getElementById('login-link').innerText = `There was an error with that. Please try logging in again.`;
+                                  document.getElementById('welcome_txt').innerText = `There was an error with that. Please try logging in again.`;
                                //   console.log('test 1 complete')
                               } else if (req.status === 200) { // Successful
-                                  document.getElementById("login-link").innerText = `Welcome, ${req.responseText}!`
+                                  document.getElementById("welcome_txt").innerText = `Welcome, ${req.responseText}!`
                                   //console.log('test 2 complete')
                               } else { // Other
-                                  document.getElementById('login-link').innerText = `An error occured. Please try logging in again.`;
+                                  document.getElementById('welcome_txt').innerText = `An error occured. Please try logging in again.`;
                                  // console.log('test 3 complete')
                               }
           
@@ -272,7 +291,7 @@
           <div class="column">
             <h4 class="title">Feature <span class="has-text-info">#4</span></h4>
             <p class="subtitle mt-3">
-              Bloxy is trusted and used daily by over 3k+ 
+              Bloxy is trusted and used daily by over 5k+ 
               people and a lot of communities.
             </p>
           </div>
@@ -287,7 +306,7 @@
 
       <div class="columns mt-6">
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">23</p>
+          <p class="title has-text-weight-bold lined">31</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-server"></i> Servers</span>
         </div>
 
@@ -333,7 +352,7 @@
         <p>
           <span class="has-text-weight-bold">Bloxy</span>
           <br />
-          &copy; <span id="cp-year"></span> Copyright ! max#0009. All Rights
+          &copy; <span id="cp-year"></span> Copyright Bloxy Team. All Rights
           Reserved.
         </p>
       </div>
