--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-282CJ9JSC9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-282CJ9JSC9');
+</script>
+
+<!--GOOGLE-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bloxy</title>
@@ -27,13 +38,7 @@
     <script src="assets/js/jquery-3.6.0.js"></script>
 
 
-<style>
 
-#welcome_txt {
-            font-size: 24px;
-            text-align: center;
-        }
-</style>
 
   </head>
 
