--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Private Policy</title>
+        <title>TOS</title>
         <link rel="stylesheet" href="assets/css/bulma.min.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -65,7 +65,7 @@
         </a>
 
         <a href="policy.html" class="navbar-item is-tab">
-          Private Policy
+          Privacy Policy
         </a>
         
         <a href="terms-of-service.html" class="navbar-item is-tab">
@@ -87,12 +87,38 @@
   <center>
   <h1>
     <b>
-    Private Policy
+    Privacy Policy
     <br>
     <br>
   </b>
   </h1>
   <h3>Bloxy</h3>
+<br>
+<br>
+<h1>
+  <center>
+    Information we store:
+    <br>
+    <br>
+User ids
+<br>
+Server ids
+<br>
+ROBLOX ids
+<br>
+How we store:
+<br>
+Our information is fully hashed and encrypted in a database. This data is not accessible by anyone but the owner.
+<br>
+<br>
+How long we store:
+<br>
+We store our data forever, if you would like a data deletion please join the support server.
+<br>
+Please keep in mind we have to store this data for commands to work as intended, if you are not happy with this do not use the bot or request your data be deleted.
+  </center>
+</h1>
+
     
 </center>
 </body>
