--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--GOOGLE-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bloxy</title>
+    <title>Bloxy - Home</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -294,17 +294,17 @@
 
       <div class="columns mt-6">
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">31</p>
+          <p class="title has-text-weight-bold lined">60+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-server"></i> Servers</span>
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">44</p>
+          <p class="title has-text-weight-bold lined">40+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-terminal"></i> Commands</span>
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">5,138</p>
+          <p class="title has-text-weight-bold lined">14k+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-users"></i> Users</span>
         </div>
       </div>
