--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>TOS</title>
+        <title>Bloxy - Private Policy</title>
         <link rel="stylesheet" href="assets/css/bulma.min.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
