--- a/index.html
+++ b/index.html
@@ -284,8 +284,7 @@ if (a.indexOf('html') > -1) { //Check of html String in URL.
           <div class="column">
             <h4 class="title">Feature <span class="has-text-info">#4</span></h4>
             <p class="subtitle mt-3">
-              Bloxy is trusted and used daily by over 5k+ 
-              people and a lot of communities.
+              Bloxy is verified & trusted by discord with over 20k+ users using the bot every single day.
             </p>
           </div>
         </div>
@@ -299,7 +298,7 @@ if (a.indexOf('html') > -1) { //Check of html String in URL.
 
       <div class="columns mt-6">
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">60+</p>
+          <p class="title has-text-weight-bold lined">90+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-server"></i> Servers</span>
         </div>
 
@@ -309,7 +308,7 @@ if (a.indexOf('html') > -1) { //Check of html String in URL.
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">14k+</p>
+          <p class="title has-text-weight-bold lined">20k+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-users"></i> Users</span>
         </div>
       </div>
@@ -326,7 +325,7 @@ if (a.indexOf('html') > -1) { //Check of html String in URL.
             working around the clock hours to bring
             a friendly user experience that also
             upholds your standards of a ROBLOX 
-            Discord bot!
+            Discord bot! 
           </p>
           <a href="#" class="button is-blurple is-medium"
             ><strong><i class="fa-solid fa-book"></i> Get Started</strong></a
