--- a/policy.html
+++ b/policy.html
@@ -103,6 +103,8 @@
 <br>
 <h1>
   <center>
+    We also are planning to store message content for future systems coming up soon, no spoilers
+    <br>
     Information we store:
     <br>
     <br>
